provider sign up

--- a/front-end/front-end/Views/Shared/_Layout.cshtml
+++ b/front-end/front-end/Views/Shared/_Layout.cshtml
@@ -65,6 +65,7 @@
         </div>
     </div>
 
-    <script src="~/js/site.js"></script>
+    @RenderSection("Scripts", required: false)
+
 </body>
 </html>
