--- a/front-end/front-end/Views/signup/Index.cshtml
+++ b/front-end/front-end/Views/signup/Index.cshtml
@@ -17,7 +17,7 @@
         </a>
 
         <!-- Hotel Owner -->
-        <a asp-controller="Signup" asp-action="ashotelowner"
+        <a asp-controller="Signup" asp-action="AsHotelOwner"
            class="btn btn-outline-primary w-100 d-flex align-items-center justify-content-center gap-2 py-2"
            style="font-size: 18px; border-radius: 10px;">
             <span style="font-size: 24px;">🏨</span>
