--- a/front-end/front-end/Views/signup/ashotelowner.cshtml
+++ b/front-end/front-end/Views/signup/ashotelowner.cshtml
@@ -1,4 +1,7 @@
-﻿@{
+﻿    
+@model front_end.ViewModel.HotelOwnerRegisterViewModel
+
+@{
     ViewData["Title"] = "signup";
     Layout = "_Layout";
 }
@@ -48,7 +51,7 @@
             </div>
 
             <!-- Next Button -->
-            <a asp-controller="Signup" asp-action="RegisterHotel"
+            <a asp-controller="Signup" asp-action="Registerhotel"
                class="btn btn-primary w-100 py-2">
                 Next
             </a>
