--- a/front-end/front-end/Views/profile/Index.cshtml
+++ b/front-end/front-end/Views/profile/Index.cshtml
@@ -23,7 +23,8 @@
             <a class="nav-link" href="#">Profile</a>
             <a class="nav-link" href="#">Wishlist</a>
             <a class="nav-link" href="#">Settings</a>
-            <a class="nav-link text-danger" href="/Login/Logout">Logout</a>
+            <a class="logout btn btn-danger mt-3" asp-controller="Login" asp-action="Logout">Logout</a>
+
         </nav>
     </aside>
 
