--- a/front-end/front-end/Views/Users/Index.cshtml
+++ b/front-end/front-end/Views/Users/Index.cshtml
@@ -8,6 +8,7 @@
             <a href="@Url.Action("Index", "Rooms")"><i class="fas fa-bed"></i> Rooms</a>
             <a href="@Url.Action("Index", "Reservation")"><i class="fas fa-book"></i> Bookings</a>
             <a href="@Url.Action("Index", "Users")" class="active"><i class="fas fa-users"></i> Customers</a>
+            <a class="logout btn btn-danger mt-3" asp-controller="Login" asp-action="Logout">Logout</a>
         </nav>
     </aside>
     <div class="admin-main-content">
