--- a/front-end/front-end/Views/Provider/Rooms.cshtml
+++ b/front-end/front-end/Views/Provider/Rooms.cshtml
@@ -33,9 +33,8 @@
                 </li>
 
                 <li class="nav-item mt-4">
-                    <a href="/Auth/Logout" class="nav-link text-danger fw-bold">
-                        <i class="fas fa-sign-out-alt me-2"></i> Logout
-                    </a>
+                  <a class="logout btn btn-danger mt-3" asp-controller="Login" asp-action="Logout">Logout</a>
+
                 </li>
 
             </ul>
