--- a/front-end/front-end/Views/admin/dashboard.cshtml
+++ b/front-end/front-end/Views/admin/dashboard.cshtml
@@ -12,9 +12,11 @@
         <div class="admin-logo">HomeAway Admin</div>
         <nav class="admin-nav">
             <a href="@Url.Action("Dashboard", "Admin")" class="active"><i class="fas fa-tachometer-alt"></i> Dashboard</a>
-            <a href="@Url.Action("Index", "Rooms")"><i class="fas fa-bed"></i> Rooms</a>
-            <a href="@Url.Action("Index", "Reservation")"><i class="fas fa-book"></i> Bookings</a>
+            <a href="@Url.Action("ARooms", "Admin")"><i class="fas fa-bed"></i> Rooms</a>
+            <a href="@Url.Action("Bookings", "Admin")"><i class="fas fa-users"></i> Bookings</a>
+
             <a href="@Url.Action("Index", "Users")"><i class="fas fa-users"></i> Customers</a>
+            <a class="logout btn btn-danger mt-3" asp-controller="Login" asp-action="Logout">Logout</a>
         </nav>
     </aside>
 
