--- a/front-end/front-end/Views/signup/ashotelowner.cshtml
+++ b/front-end/front-end/Views/signup/ashotelowner.cshtml
@@ -1,5 +1,5 @@
 ﻿    
-@model front_end.ViewModel.HotelOwnerRegisterViewModel
+@model front_end.ViewModel.AsHotelOwnerViewModel
 
 @{
     ViewData["Title"] = "signup";
