--- a/front-end/front-end/Views/signup/ascustomer.cshtml
+++ b/front-end/front-end/Views/signup/ascustomer.cshtml
@@ -45,7 +45,16 @@
                         <span asp-validation-for="Password" class="text-danger"></span>
                     </div>
 
-                    <button type="submit" class="btn btn-primary w-100">Register</button>
+                    <form asp-action="AsCustomer" method="post">
+    <!-- الحقول -->
+    <div class="d-flex justify-content-center mt-4">
+        <a asp-controller="Login" asp-action="Index" class="btn btn-primary px-4">
+            Confirm
+        </a>
+    </div>
+
+</form>
+
                 </form>
 
             </div>
