--- a/front-end/front-end/Views/signup/registerhotel.cshtml
+++ b/front-end/front-end/Views/signup/registerhotel.cshtml
@@ -6,7 +6,7 @@
 
 <div class="container py-5">
     <div class="card shadow p-4 rounded-4">
-        <form asp-action="RegisterHotel" method="post" enctype="multipart/form-data">
+        <form asp-action="RegisterHotelinDB" method="post" enctype="multipart/form-data">
             <h2 class="text-center fw-semibold mb-4">Register your hotel</h2>
 
             <div class="row g-4">
